test/resources/force-app/main/default/objects/Account/fields/LastKnownLocation__c.field-meta.xml
<CustomField>
    <fullName>LastKnownLocation__c</fullName>
    <label>LastKnownLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>