test/resources/force-app/main/default/objects/Account/fields/MainAsset__c.field-meta.xml
<CustomField>
    <fullName>MainAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bardzo ważny asset dla tego konta</description>
    <inlineHelpText>Jak w opisie</inlineHelpText>
    <label>MainAsset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>