test/resources/force-app/main/default/objects/Account/fields/RichDescription__c.field-meta.xml
<CustomField>
    <fullName>RichDescription__c</fullName>
    <label>RichDescription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>