test/resources/force-app/main/default/objects/Account/recordTypes/Boss.recordType-meta.xml
<RecordType>
    <fullName>Boss</fullName>
    <active>true</active>
    <label>Boss</label>
</RecordType>