test/resources/force-app/main/default/objects/Account/recordTypes/WaterSupplier.recordType-meta.xml
<RecordType>
    <fullName>WaterSupplier</fullName>
    <active>false</active>
    <label>WaterSupplier</label>
</RecordType>